--- a/package.json
+++ b/package.json
@@ -1,16 +1,44 @@
 {
   "name": "car-rental-api",
   "version": "1.0.0",
-  "description": "",
+  "dependencies": {
+    "babel-plugin-inline-dotenv": "^1.2.2",
+    "body-parser": "^1.18.3",
+    "cors": "^2.8.5",
+    "cuid": "^2.1.8",
+    "express": "^4.16.4",
+    "mongodb": "^3.1.13",
+    "sanitize-html": "^1.20.0"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.12.1",
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.4",
+    "@shelf/jest-mongodb": "^1.2.3",
+    "babel-jest": "^24.4.0",
+    "dotenv": "^6.2.0",
+    "faker": "^4.1.0",
+    "jest": "^24.3.1",
+    "nodemon": "^1.18.10",
+    "rimraf": "^2.6.3"
+  },
   "main": "index.js",
   "scripts": {
     "test": "jest"
+  },
+  "jest": {
+    "preset": "@shelf/jest-mongodb",
+    "verbose": false,
+    "roots": [
+      "src"
+    ]
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/kwdowik/car-rental-api.git"
   },
-  "author": "kwdowik",
+  "author": "Kacper Wdowik <wdowikkacper@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/kwdowik/car-rental-api/issues"
