--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -2,9 +2,9 @@ name: Docker
 
 on:
   push:
-    # Publish `$default-branch` as Docker `latest` image.
+    # Publish `chore/github-actions` as Docker `latest` image.
     branches:
-      - $default-branch
+      - chore/github-actions
 
     # Publish `v1.2.3` tags as releases.
     tags:
@@ -66,7 +66,7 @@ jobs:
           [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
 
           # Use Docker `latest` tag convention
-          [ "$VERSION" == "$default-branch" ] && VERSION=latest
+          [ "$VERSION" == "chore/github-actions" ] && VERSION=latest
 
           echo IMAGE_ID=$IMAGE_ID
           echo VERSION=$VERSION
