--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -1,13 +1,14 @@
-name: Publish Docker image
+name: Publish Docker Image
 
 on:
-  release:
-    types: [published]
+  schedule:
+    - cron: '0 10 * * *' # Weekly on Sundays at 02:00
   push:
     branches:
       - chore/github-actions
-  schedule:
-    - cron: '0 2 * * 0' # Weekly on Sundays at 02:00
+    tags:
+      - 'v*.*.*'
+  pull_request:
 
 jobs:
   ci:
@@ -33,12 +34,34 @@ jobs:
     needs: ci
     runs-on: ubuntu-latest
     steps:
-      - name: Check out the repo
+      - 
+        name: Check out the repo
         uses: actions/checkout@v2
-      - name: Push to Docker Hub
-        uses: docker/build-push-action@v1
+      - 
+        name: Docker meta
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
+        with:
+          images: kwdowik/car-rental-api # list of Docker images to use as base name for tags
+          tag-sha: true # add git short SHA as Docker tag
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      -
+        name: Login to DockerHub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v1 
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: kwdowik/car-rental-api
-          tag_with_ref: true
+
+      - 
+        name: Build and push
+        id: docker_build  
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.docker_meta.outputs.tags }},kwdowik/car-rental-api:latest
+          labels: ${{ steps.docker_meta.outputs.labels }}
