chore: add missing start script

--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "preflight": ". ./scripts/preflight.sh",
     "build": "npm run clean && babel src -d dist",
     "clean": "rimraf dist",
+    "db": "babel-node ./db/index.js",
     "dev": "nodemon --exec babel-node ./src/index.js",
+    "start": "npm run clean && npm run build && npm run db && cd dist && babel-node index.js",
     "test": "jest",
     "test:watch": "jest --watch"
   },
