--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,18 +1,19 @@
-sut:
-  env_file:
-    - ".env.staging"
-  build: .
-  command: /bin/sh run_tests.sh
-  depends_on:
-    - mongo
-  links:
-    - mongo
-    
-
-mongo:
-  container_name: mongo
-  image: mongo
-  volumes:
-    - ./data:/data/db
-  ports:
-    - "27017:27017"
+version: "3"
+services:
+  sut:
+    env_file:
+      - ".env.staging"
+    build: .
+    command: /bin/sh run_tests.sh
+    depends_on:
+      - mongo
+    links:
+      - mongo
+      
+  mongo:
+    container_name: mongo
+    image: mongo
+    volumes:
+      - ./data:/data/db
+    ports:
+      - "27017:27017"
